--- a/moviez-case-study.html
+++ b/moviez-case-study.html
@@ -45,7 +45,14 @@
       border: 1.5px solid #dbeafe;
       transition: background 0.2s, border 0.2s;
     }
-    .case-block:first-of-type {
+    /* Alternating colors for case blocks except the first */
+    .case-block:nth-child(n+2):nth-child(even) {
+      background: #f7f7fa;
+    }
+    .case-block:nth-child(n+2):nth-child(odd) {
+      background: #f0f6ff;
+    }
+    .case-block:first-child {
       background: linear-gradient(90deg, #6a11cb 0%, #2575fc 100%);
       border: 1.5px solid #b3d1fa;
     }
