--- a/index.html
+++ b/index.html
@@ -724,14 +724,80 @@
         font-weight: 400;
         opacity: 0.97;
       }
+      /* --- Project Card Styling to Match Achievements --- */
+      .project-card {
+        background: #fff !important;
+        border-radius: 1.3rem !important;
+        box-shadow: 0 4px 24px rgba(120,115,245,0.10), 0 2px 8px rgba(0,0,0,0.08) !important;
+        padding: 2.2rem 1.2rem 1.7rem 1.2rem !important;
+        min-width: 240px;
+        max-width: 300px;
+        flex: 1 1 260px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        border: 2px solid #e3e6ff !important;
+        margin-bottom: 1.5rem;
+        transition: box-shadow 0.18s, transform 0.18s;
+        color: #2a254d !important;
+        font-size: 1.18rem !important;
+        font-weight: 700 !important;
+        text-align: center !important;
+      }
+      .project-card:hover {
+        box-shadow: 0 8px 32px rgba(120,115,245,0.18) !important;
+        transform: translateY(-7px) scale(1.04) !important;
+        color: #2a254d !important;
+      }
+      .project-card .project-icon {
+        font-size: 2.4rem !important;
+        margin-bottom: 1.1rem !important;
+        color: #7873f5 !important;
+      }
+      .project-card .project-tag {
+        display: inline-block;
+        margin-bottom: 0.2rem !important;
+        margin-top: 0.7rem;
+        padding: 0.18em 1.1em;
+        font-size: 0.98rem !important;
+        font-weight: 600;
+        border-radius: 999px;
+        background: linear-gradient(90deg, #e3f0ff 60%, #f7f8fa 100%);
+        color: #2563eb !important;
+        box-shadow: 0 1px 6px rgba(120,115,245,0.07);
+        letter-spacing: 0.5px !important;
+        vertical-align: middle;
+        transition: background 0.2s, color 0.2s;
+      }
+      .project-card .project-tag.web {
+        background: linear-gradient(90deg, #dbeafe 60%, #6ec6ff 100%);
+        color: #2563eb !important;
+      }
+      .project-card .project-tag.uiux {
+        background: linear-gradient(90deg, #e0e7ff 60%, #c7d2fe 100%);
+        color: #7c3aed !important;
+      }
+      .project-card .project-tag.graphic {
+        background: linear-gradient(90deg, #ffe0f0 60%, #ffe6e6 100%);
+        color: #e94f7c !important;
+      }
+      .project-card .project-desc {
+        font-size: 1.01rem !important;
+        color: #3d375a !important;
+        margin-top: 0.5rem !important;
+        text-align: center !important;
+        font-weight: 400 !important;
+        opacity: 0.97 !important;
+      }
       @media (max-width: 900px) {
         .recent-achievements-row {
           gap: 1.2rem;
         }
-        .achievement-card {
+        .achievement-card, .project-card {
           min-width: 180px;
           max-width: 98vw;
-          padding: 1.5rem 0.7rem 1.2rem 0.7rem;
+          padding: 1.5rem 0.7rem 1.2rem 0.7rem !important;
         }
       }
       @media (max-width: 700px) {
